# schema-pilot

./: .gitignore  Cargo.toml  create_data.py  test.ipynb
assets/: schemas.yaml  table_definition.csv
runtime_assets/vecdb/columns.lance/_transactions/: 0-305de8a6-7958-4db5-9c28-e850aa01c41e.txn  1-236814d3-37e9-45fd-b82b-f34f75119853.txn
runtime_assets/vecdb/columns.lance/_versions/: 1.manifest  2.manifest
runtime_assets/vecdb/columns.lance/data/: 481a93eb-0757-440c-b2a6-70360f116f93.lance
runtime_assets/vecdb/tables.lance/_transactions/: 0-252eadf6-10c3-4dfc-bd4a-703e9fcbb4af.txn  0-6b72a842-eb61-4142-add9-a84769862ae2.txn  1-687a8613-d984-43b1-9357-4a7b7d075b81.txn  1-c1d8563c-3f97-4454-b321-10b0e58e76b1.txn
runtime_assets/vecdb/tables.lance/_versions/: 1.manifest  2.manifest
runtime_assets/vecdb/tables.lance/data/: 0f5a8419-884f-43b5-8f8e-d42fa5e148ca.lance  d6d0e1fe-f91c-4676-a297-67ed170249c3.lance
src/: embedder.rs  llm.rs  main.rs  vecdb.rs  vectors.rs
src/models/: gguf_llama.rs  llama32.rs  mod.rs  prompts.rs  smollm.rs
