[package]
name = "schema-pilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
lancedb = { version = "0.12.0"}
serde = "1.0.214"
serde_json = "1.0.132"
arrow-array = "52.2.0"
arrow-schema = "52.2.0"
ollama-rs = "0.2.1"
serde_arrow = { version = "0.12.2", features = ["arrow-52"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "std",
        "json",
    ] }
futures = "0.3.31"
tempdir = "0.3.7"
tokio = { version = "1.41.1", features = ["full"] }
csv = "1.3.1"
